--- a/metodosProyecto/src/metodosproyecto/randomForm.form
+++ b/metodosProyecto/src/metodosproyecto/randomForm.form
@@ -57,8 +57,11 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="M&#xe9;todo de los centros cuadrados"/>
+        <Property name="text" type="java.lang.String" value="M&#xe9;todo de los centro cuadrados"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
